# MetaExtractIng

./: CITATION.cff  README.md  pyproject.toml
docs/: Template Creation Flowchart.vpd  ontology.jsonld  ontology.nt  ontology.owl
docs/provenance/: provenance-en.html  provenance-en.ttl
mmdbdoctest/: ontology.ttl
mmdbdoctest/webvowl/data/: ontology.json
src/meta_extractIng/: config.json  csv_extractor.py  gromacs_extractor.py  main.py  netcdf_extractor.py  open_dihu_extractor.py
src/meta_extractIng/lib/: jsonldGenerator.py  metadataGeneratorHelper.py  ontologyScraper.py  util.py
src/meta_extractIng/simulations/csv/: parking.csv
src/meta_extractIng/simulations/csv/__expected__/: classes.json  extract_parking.json  metadata_parking.json  metadata_parking.jsonld
src/meta_extractIng/simulations/csv/__output__/: template.json
src/meta_extractIng/simulations/gromacs/__expected__/: extract_simulation 1.json  extract_simulation 2.json  metadata_simulation 1.json  metadata_simulation 1.jsonld  metadata_simulation 2.json  metadata_simulation 2.jsonld
src/meta_extractIng/simulations/gromacs/__output__/: context.json  template.json
src/meta_extractIng/simulations/gromacs/simulation 1/: run.job
src/meta_extractIng/simulations/gromacs/simulation 2/: run.job  run.mdp  run.usermd
src/meta_extractIng/simulations/netcdf/: simulation 2.cdl
src/meta_extractIng/simulations/netcdf/__expected__/: metadata_simulation 2.jsonld
src/meta_extractIng/simulations/netcdf/__output__/: extract_simulation 1.json  metadata_simulation 2.json  (+1 more)
tests/: test-extract-output.py
(+4 files in other folders)
